test/conformance/chainsaw/validating-policies/crd-created-after-policy/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno-reports-controller-wildcard
rules:
  - apiGroups: ["*"]
    resources: ["*"]
    verbs: ["get", "list", "watch"]

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: kyverno-reports-controller-wildcard
subjects:
  - kind: ServiceAccount
    name: kyverno-reports-controller
    namespace: kyverno
roleRef:
  kind: ClusterRole
  name: kyverno-reports-controller-wildcard
  apiGroup: rbac.authorization.k8s.io
